[gd_scene load_steps=21 format=3 uid="uid://msg3vpadbe3l"]

[ext_resource type="Script" path="res://scripts/beeBomb.gd" id="1_8f2vd"]
[ext_resource type="Texture2D" uid="uid://kprpmkb2yq6h" path="res://sprites/obstacles/spr_beeBombExplode.png" id="1_dirqx"]
[ext_resource type="Texture2D" uid="uid://cxp7tpgq4nrmu" path="res://sprites/obstacles/spr_ropePull.png" id="2_d3jfm"]
[ext_resource type="AudioStream" uid="uid://b2iwsfgw8ngom" path="res://sounds/sfx_explosion.wav" id="4_00rsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3fxjt"]
atlas = ExtResource("1_dirqx")
region = Rect2(102, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_iarwn"]
atlas = ExtResource("1_dirqx")
region = Rect2(204, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv8o1"]
atlas = ExtResource("1_dirqx")
region = Rect2(306, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtoc4"]
atlas = ExtResource("1_dirqx")
region = Rect2(408, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ok81"]
atlas = ExtResource("1_dirqx")
region = Rect2(510, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sd3u"]
atlas = ExtResource("1_dirqx")
region = Rect2(612, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtp47"]
atlas = ExtResource("1_dirqx")
region = Rect2(714, 0, 102, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfxpt"]
atlas = ExtResource("1_dirqx")
region = Rect2(0, 0, 102, 94)

[sub_resource type="SpriteFrames" id="SpriteFrames_m5epo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fxjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iarwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv8o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtoc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ok81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sd3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtp47")
}],
"loop": false,
"name": &"Explosion",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfxpt")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cva4s"]
atlas = ExtResource("2_d3jfm")
region = Rect2(0, 0, 116, 169)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqmiq"]
atlas = ExtResource("2_d3jfm")
region = Rect2(116, 0, 116, 169)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ddiy"]
atlas = ExtResource("2_d3jfm")
region = Rect2(232, 0, 116, 169)

[sub_resource type="AtlasTexture" id="AtlasTexture_nixck"]
atlas = ExtResource("2_d3jfm")
region = Rect2(348, 0, 116, 169)

[sub_resource type="AtlasTexture" id="AtlasTexture_qri20"]
atlas = ExtResource("2_d3jfm")
region = Rect2(464, 0, 116, 169)

[sub_resource type="SpriteFrames" id="SpriteFrames_4fnsp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cva4s")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqmiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ddiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nixck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qri20")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Pull",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jewoe"]
size = Vector2(6, 119)

[node name="beeBomb" type="Node2D"]
z_index = -1
script = ExtResource("1_8f2vd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m5epo")
animation = &"Idle"
autoplay = "Idle"
centered = false
offset = Vector2(-51, -47)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(-8, 63)
sprite_frames = SubResource("SpriteFrames_4fnsp")
animation = &"Idle"
autoplay = "Idle"
centered = false
offset = Vector2(-51, -47)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 169)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -58.5)
shape = SubResource("RectangleShape2D_jewoe")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_00rsa")
volume_db = -2.0
max_distance = 820.0
bus = &"Sound"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_00rsa")
volume_db = -7.0
bus = &"Sound"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 50)
scale = Vector2(16.7, 20.7)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
